<resources>
    <string name="app_name">Gestion de Devis</string>

    <!-- AddProduitActivity -->
    <string name="nom_produit">Nom du produit</string>
    <string name="description_produit">Description</string>
    <string name="prix_produit">Prix (CAD)</string>
    <string name="categorie_produit">Catégorie</string>
    <string name="date_ajout">Date d\'ajout</string>
    <string name="etat_produit">État du produit</string>
    <string name="neuf">Neuf</string>
    <string name="usage">Usagé</string>
    <string name="taxable">Taxable</string>
    <string name="non_taxable">Non taxable</string>
    <string name="taux_taxe">Taux de taxe</string>
    <string name="sauvegarder">Sauvegarder</string>
    <string name="annuler">Annuler</string>
    <string name="ajouter_produit">Ajouter un produit</string>


    <!-- MainActivity -->
    <string name="trier_par">Trier par</string>
    <string name="nom">Nom</string>
    <string name="prix">Prix</string>
    <string name="croissant">Croissant</string>
    <string name="decroissant">Décroissant</string>

    <!-- PanierActivity -->
    <string name="panier">Panier</string>
    <string name="total_sans_taxes">Total sans taxes:</string>
    <string name="montant_taxes">Montant des taxes:</string>
    <string name="total_avec_taxes">Total avec taxes:</string>
    <string name="vider_panier">Vider le panier</string>

    <!-- Messages -->
    <string name="confirmation_suppression">Êtes-vous sûr de vouloir supprimer ce produit?</string>
</resources>